--- a/MechatronicsPortal/MechatronicsPortal.csproj
+++ b/MechatronicsPortal/MechatronicsPortal.csproj
@@ -265,7 +265,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\AlumniController.cs" />
     <Compile Include="Controllers\ProgramManagerController.cs" />
     <Compile Include="Controllers\Util.cs" />
     <Compile Include="Global.asax.cs">
@@ -358,18 +358,21 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\PersonalInformation.cshtml" />
-    <Content Include="Views\Home\ProfessionalDetails.cshtml" />
-    <Content Include="Views\Home\EducationalDetails.cshtml" />
-    <Content Include="Views\Home\alumniSurvey.cshtml" />
-    <Content Include="Views\Home\employeeInformation.cshtml" />
-    <Content Include="Views\Home\employeeSurvey.cshtml" />
+    <Content Include="Views\Alumni\About.cshtml" />
+    <Content Include="Views\Alumni\Contact.cshtml" />
+    <Content Include="Views\Alumni\PersonalInformation.cshtml" />
+    <Content Include="Views\Alumni\ProfessionalDetails.cshtml" />
+    <Content Include="Views\Alumni\EducationalDetails.cshtml" />
+    <Content Include="Views\Alumni\alumniSurvey.cshtml" />
+    <Content Include="Views\Alumni\employeeInformation.cshtml" />
+    <Content Include="Views\Alumni\employeeSurvey.cshtml" />
     <Content Include="Views\ProgramManager\ViewStudents.cshtml" />
+    <Content Include="Views\Alumni\login.cshtml" />
+    <Content Include="Views\Alumni\forgotPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
