--- a/MechatronicsPortal/Web.config
+++ b/MechatronicsPortal/Web.config
@@ -88,6 +88,5 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MechaAlumniEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MechaAlumni;integrated security=True;pooling=False;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="MechaAlumniEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MechaAlumni;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
