--- a/MechatronicsPortal/Web.config
+++ b/MechatronicsPortal/Web.config
@@ -11,8 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="smtp" value="smtp.gmail.com" />
     <add key="portnumber" value="587" />
-    <add key="username" value="atifsaa02@gmail.com" />
-    <add key="password" value="saadfarhan12" />
+    <add key="username" value="GMAIL_USERNAME" />
+    <add key="password" value="GMAIL_PASSWORD" />
     <add key="IsSSL" value="true" />
   </appSettings>
   <system.web>
@@ -88,5 +88,5 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="MechaAlumniEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MechaAlumni;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  </connectionStrings>
 </configuration>
